# Jozin

./: BUILD_STATUS.md  CLAUDE.md  Cargo.toml  README.md  SCOPE.md  TASK+PHASE_PLAN.md  TASKMASTER_PLAN.md  justfile  verify_build.sh
.agent/: README.md
.agent/SOP/: development_best_practices.md
.agent/System/: project_architecture.md
.agent/Tasks/: phase1_completion.md
.agents/: code-senior.md  code.md  refactor-benchmark.md  safety-net.md
SCOPE/: jozag-worker.md  jozan-worker.md  jozimg-worker.md  joztag-worker.md  jozync-worker.md
app/src-tauri/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli_basic.rs
core/: Cargo.toml
core/src/: cleanup.rs  faces.rs  lib.rs  migrate.rs  scan.rs  tags.rs  thumbs.rs  verify.rs
