[package]
name = "jozin"
version = "0.1.0"
edition = "2021"

[dependencies]
atty = "0.2"
clap = { version = "4", features = ["derive"] }
jozin-core = { path = "../core" }
num_cpus = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
