[package]
name = "jozin-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["images", "exif", "hash"]
images = []
exif   = []
hash   = []
faces  = []     # optional
tags   = []     # optional
thumbs = []     # optional

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
rayon = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
# exif/exiftool/onnx etc. später

[dev-dependencies]
assert_cmd = "2"
