[package]
name = "jozin-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Phase 2+ features (currently stubs)
faces = []   # Face detection (will add: "dep:ort", "dep:ndarray")
tags = []    # ML tagging (will add: "dep:ort", "dep:tokenizers")
thumbs = []  # Thumbnail generation (will add: "dep:image")

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
walkdir = "2"              # Directory traversal (Phase 1)
globset = "0.4"            # Glob pattern matching (Phase 1)
# Dependencies will be added as needed:
# rayon = "1.8"              # Parallel processing (Phase 2)
# kamadak-exif = "0.5"       # EXIF parsing (Phase 1)

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
